diesel_compile_tests/tests/fail/user_defined_functions_follow_same_selection_rules.stderr
error[E0271]: type mismatch resolving `<foo<Bound<Integer, i32>> as Expression>::SqlType == Text`
  --> tests/fail/user_defined_functions_follow_same_selection_rules.rs:40:38
   |
LL |     let _ = users::table.filter(name.eq(foo(1)));
   |                                      ^^ type mismatch resolving `<foo<Bound<Integer, i32>> as Expression>::SqlType == Text`
   |
note: expected this to be `diesel::sql_types::Text`
  --> tests/fail/user_defined_functions_follow_same_selection_rules.rs:30:27
   |
LL |     fn foo(x: Integer) -> Integer;
   |                           ^^^^^^^
   = note: required for `foo_utils::foo<diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>` to implement `AsExpression<diesel::sql_types::Text>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Once`
    --> tests/fail/user_defined_functions_follow_same_selection_rules.rs:45:23
     |
45   |         .load::<User>(&mut conn);
     |          ----         ^^^^^^^^^ expected `Once`, found `Never`
     |          |
     |          required by a bound introduced by this call
     |
note: required for `posts::columns::title` to implement `AppearsOnTable<users::table>`
    --> tests/fail/user_defined_functions_follow_same_selection_rules.rs:16:9
     |
16   |         title -> VarChar,
     |         ^^^^^
     = note: associated types for the current `impl` cannot be restricted in `where` clauses
     = note: 3 redundant requirements hidden
     = note: required for `Grouped<Eq<name, bar<title>>>` to implement `AppearsOnTable<users::table>`
     = note: required for `WhereClause<Grouped<Eq<name, bar<title>>>>` to implement `diesel::query_builder::where_clause::ValidWhereClause<FromClause<users::table>>`
     = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>` to implement `Query`
     = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>` to implement `LoadQuery<'_, _, User>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
          = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0271`.
